; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_time.c_native_to_linux_itimerspec.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_time.c_native_to_linux_itimerspec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l_itimerspec = type { i32, i32 }
%struct.itimerspec = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @native_to_linux_itimerspec(%struct.l_itimerspec* %0, %struct.itimerspec* %1) #0 {
  %3 = alloca %struct.l_itimerspec*, align 8
  %4 = alloca %struct.itimerspec*, align 8
  %5 = alloca i32, align 4
  store %struct.l_itimerspec* %0, %struct.l_itimerspec** %3, align 8
  store %struct.itimerspec* %1, %struct.itimerspec** %4, align 8
  %6 = load %struct.l_itimerspec*, %struct.l_itimerspec** %3, align 8
  %7 = getelementptr inbounds %struct.l_itimerspec, %struct.l_itimerspec* %6, i32 0, i32 1
  %8 = load %struct.itimerspec*, %struct.itimerspec** %4, align 8
  %9 = getelementptr inbounds %struct.itimerspec, %struct.itimerspec* %8, i32 0, i32 0
  %10 = call i32 @native_to_linux_timespec(i32* %7, i32* %9)
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.l_itimerspec*, %struct.l_itimerspec** %3, align 8
  %15 = getelementptr inbounds %struct.l_itimerspec, %struct.l_itimerspec* %14, i32 0, i32 0
  %16 = load %struct.itimerspec*, %struct.itimerspec** %4, align 8
  %17 = getelementptr inbounds %struct.itimerspec, %struct.itimerspec* %16, i32 0, i32 0
  %18 = call i32 @native_to_linux_timespec(i32* %15, i32* %17)
  store i32 %18, i32* %5, align 4
  br label %19

19:                                               ; preds = %13, %2
  %20 = load i32, i32* %5, align 4
  ret i32 %20
}

declare dso_local i32 @native_to_linux_timespec(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
